manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tad-category-dialog-service
spec:
  selector:
    app: tad-category-dialog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
